--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/public/love.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movie-search</title>
+    <title>movie_search</title>
   </head>
   <body>
     <div id="root"></div>
