--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="icon" type="image" href="/public/love.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movie_search</title>
+    <title>ScreenLove</title>
   </head>
   <body>
     <div id="root"></div>
